--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Agrowork</title>
-  <link rel="shortcut icon" href="/favicon.ico"></head>
+  <link rel="shortcut icon" href="agroworks/favicon.ico"></head>
 
   <body>
     <div id="root"></div>
-  <script type="text/javascript" src="/bundle.js"></script></body>
+  <script type="text/javascript" src="agroworks/bundle.js"></script></body>
 </html>
